fix options on mobile 1)

--- a/page/public/css/mah.css
+++ b/page/public/css/mah.css
@@ -41,7 +41,7 @@ textarea {
   background-color: var(--main-fnt-col);
   color: var(--main-bg-col);
   border: 1px solid var(--main-fnt-col);
-  padding: 15px 32px;
+  padding: 12px 28px;
   text-align: center;
   margin: 1px;
   float: left;
@@ -51,26 +51,37 @@ textarea {
   background-color: var(--main-bg-col);
   color: var(--main-fnt-col);
   border: 1px solid var(--main-fnt-col);
-  padding: 15px 32px;
+  padding: 12px 18px;
   text-align: center;
   margin: 1px;
   float: left;
 }
 
-.left {
+.left50 {
   float: left;
   width: 50%;
   padding: 10px;
 }
-.right {
+.right50 {
   float: right;
   width: 50%;
+  padding: 10px;
+}
+.left10 {
+  float: left;
+  width: 15%;
+  padding: 10px;
+}
+.right90 {
+  float: right;
+  width: 85%;
   padding: 10px;
 }
 
 
 @media screen and (max-width: 1200px) {
-  .left, .right {
+  .left50, .right50, .left10, .right90 {
     width: 100%;
   }
+  
 }
